--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 				<div class="col-sm-12">
 					<h1>{{ page.title }}</h1>
 					<h2>#fstoco 2016 Oct. 17-18th 2016</h2>
-					<p><a class="btn btn-success btn-lg">Buy Tickets!</a></p>
+					<h4><a class="btn btn-success btn-lg">Buy Tickets!</a></h4>
 				</div>
 			</div>
 		</div>
