--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -6,7 +6,7 @@
 					<h2>The conference that covers all the layers of the Web and the people who weave it!</h2>
 					<h3>Oct 17-18th, 2016</h3>
 					<h3>Toronto, Canada</h3>
-					<h4><a class="btn btn-success btn-lg">Buy Tickets!</a></h4>
+					<h4>Tickets on Sale Jan 1st!</h4>
 				</div>
 			</div>
 		</div>
