--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,17 +12,17 @@
 		</div>
 		<div>
 			<div class="sponsor">
-				<p class="rank">Official Canadaian Airline</p>
+				<p class="rank">Official Canadian Airline</p>
 				<div class="sponsor-img">
 					<a href="http://www.aircanada.com/en/home.html" target="_blank"><img src="/static/images/sponsors/aircanada.svg" class="img-responsive" alt="Air Canada" /></a>
 				</div>
 			</div>
-			<div class="sponsor">
+			<!-- <div class="sponsor">
 				<p class="rank">Travel Partner</p>
 				<div class="sponsor-img">
 					<a href="http://www.viarail.ca/en" target="_blank"><img src="/static/images/sponsors/viarail.svg" class="img-responsive" alt="ViaRail" /></a>
 				</div>
-			</div>
+			</div> -->
 			
 		</div>
 	</div>
