--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
                     <a href="#">Tickets</a>
                 </li> 
                 <li>
-                    <a href="http://eventmobi.com/fstoconf15">App</a>
+                    <a href="http://eventmobi.com/fstoco2016">App</a>
                 </li>   
                 <li>
                     <a href="http://www.meetup.com/full-stack-to/">Meetups</a>
