--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,28 +22,28 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <meta name="description" content="Full Stack Toronto is a non-profit that hosts monthly seminars and an annual conference that covers all layers of the web and the people who weave it! #fstoco is coming up Oct. 17-18th, 2016" />
+    <meta name="description" content="Full Stack Toronto is a non-profit that hosts monthly seminars and an annual conference that covers all the layers of the web and the people who weave it! #fstoco is coming up Oct. 17-18th, 2016 in Toronto, Canada" />
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Full Stack Toronto">
-    <meta itemprop="description" content="Full Stack Toronto is a non-profit that hosts monthly seminars and an annual conference that covers all layers of the web and the people who weave it! #fstoco is coming up Oct. 17-18th, 2016">
-    <meta itemprop="image" content="http://fsto.co/static/images/card.jpg">
+    <meta itemprop="description" content="Full Stack Toronto is a non-profit that hosts monthly seminars and an annual conference that covers all the layers of the web and the people who weave it! #fstoco is coming up Oct. 17-18th, 2016 in Toronto, Canada">
+    <meta itemprop="image" content="https://fsto.co/static/images/card.jpg">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@fullstackto">
     <meta name="twitter:title" content="{{ page.title }} | Full Stack Toronto">
-    <meta name="twitter:description" content="Full Stack Toronto is a non-profit that hosts monthly seminars and an annual conference that covers all layers of the web and the people who weave it! #fstoco is coming up Oct. 17-18th, 2016">
+    <meta name="twitter:description" content="Full Stack Toronto is a non-profit that hosts monthly seminars and an annual conference that covers all the layers of the web and the people who weave it! #fstoco is coming up Oct. 17-18th, 2016 in Toronto, Canada">
     <meta name="twitter:creator" content="@fullstackto">
     <!-- Twitter summary card with large image must be at least 280x150px -->
-    <meta name="twitter:image:src" content="http://fsto.co/static/images/card.jpg">
+    <meta name="twitter:image:src" content="https://fsto.co/static/images/card.jpg">
 
     <!-- Open Graph data -->
     <meta property="og:title" content="{{ page.title }} | Full Stack Toronto" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://fsto.co" />
-    <meta property="og:image" content="http://fsto.co/static/images/card.jpg" />
-    <meta property="og:description" content="Full Stack Toronto is a non-profit that hosts monthly seminars and an annual conference that covers all layers of the web and the people who weave it! #fstoco is coming up Oct. 17-18th, 2016" />
+    <meta property="og:url" content="https://fsto.co" />
+    <meta property="og:image" content="https://fsto.co/static/images/card.jpg" />
+    <meta property="og:description" content="Full Stack Toronto is a non-profit that hosts monthly seminars and an annual conference that covers all the layers of the web and the people who weave it! #fstoco is coming up Oct. 17-18th, 2016 in Toronto, Canada" />
     <meta property="og:site_name" content="Full Stack Toronto" />
 
 </head>
