--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,12 @@
 					<a href="http://www.aircanada.com/en/home.html" target="_blank"><img src="/static/images/sponsors/aircanada.svg" class="img-responsive" alt="Air Canada" /></a>
 				</div>
 			</div>
+			<div class="sponsor">
+				<p class="rank">Host Hotel</p>
+				<div class="sponsor-img">
+					<a href="http://www.sheratontoronto.com/" target="_blank"><img src="/static/images/sponsors/sheraton.jpg" class="img-responsive" alt="Sheraton Centre Hotel" /></a>
+				</div>
+			</div>
 			<!-- <div class="sponsor">
 				<p class="rank">Travel Partner</p>
 				<div class="sponsor-img">
