--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                     <a href="/schedule">Schedule</a>
                 </li> 
                 <li>
-                    <a href="#">Tickets</a>
+                    <a href="https://fstoco16.eventbrite.ca">Register</a>
                 </li> 
                 <li>
                     <a href="http://eventmobi.com/fstoco2016">App</a>
