Add InfoBar test
Draft texts and position.
+ Fontawesome ticket icon I thought would suit.

--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -1,13 +1,40 @@
 <header class="big multi-poly">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<h1>#fstoco 2016</h1>
-					<h2>The conference that covers all the layers of the Web and the people who weave it!</h2>
-					<h3>Oct 17-18th, 2016</h3>
-					<h3>Toronto, Canada</h3>
-					<h4>Tickets on Sale Jan 1st!</h4>
-				</div>
-			</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<h1>#fstoco 2016</h1>
+				<h2>The conference that covers all the layers of the Web and the people who weave it!</h2>
+				<h3>Oct 17-18th, 2016</h3>
+				<h3>Toronto, Canada</h3>
+			</div>	
 		</div>
-	</header>
+		<div id="information-bar">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						<h4>This is what you'll get</h4>
+						<div>
+						<i class="fa fa-hand-peace-o"></i>
+						<ul>
+							<li>Passion Talks - by you!</li>
+							<li>Video recordings and keynotes</li>
+							<li>Scheduling mobile app</li>
+							<li>Lunch, snacks and refreshments</li>
+							<li>Swag, schwag and goodies!</li>
+						</ul>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						
+						<h4>Get your tickets here!!</h4>
+						<a class="btn btn-success btn-lg wow bounceIn"><i class="fa fa-ticket" style="visibility: visible; animation-name: bounceIn;"></i>
+							<span> Buy your tickets now!</span></a>
+						
+						<p class="templabelanyway->" style="color:#999" >Get yours ASAP for the early bird discounts!</p>
+						
+					</div>
+				</div>	
+			</div>
+		</div>	
+	</div>	
+</header>
