--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -232,11 +232,10 @@ header.big {
     h3 {
 	    margin: 0 0 10px;
 	    font-size: 30px;
-      font-family: "Courier New",Courier,monospace;
+		font-family: "Courier New",Courier,monospace;
     }
 	h4 {
-    font-family: "Courier New",Courier,monospace;
-		margin:30px 0 50px;
+    	font-family: "Courier New",Courier,monospace;
 	}
 	@media (max-width: 768px){
 		h1 {
@@ -245,6 +244,7 @@ header.big {
 		h2 {
 			font-size:40px;
 		}
+	}	
 	@media (max-width: 640px){
 		h1 {
 			font-size:50px;
@@ -255,10 +255,89 @@ header.big {
 		h3 {
 			font-size:25px;
 		}
-}	
+	}
+	#information-bar {
+		margin-top:30px;
+		margin-bottom:-100px;
+		color:#333;
+		text-shadow: none;
+		font-size:15px;
+		.container {
+			width:auto;
+			padding: 10px 15px;
+			background: #F6F9F9;
+			position: relative;
+			z-index: 999;
+			a {
+				line-height: 25px;
+				margin-bottom:30px;
+			}
+			.fa {
+				font-size:25px;
+				margin-right:5px;
+			}
+			h4 {
+				margin:30px 0;
+				font-size:22px;
+				@media (min-width:500px) {
+					font-size:25px;
+				}
+			}
+		}
+		[class*='col-'] {
+			div {
+				margin:-10px auto 0;
+				width:280px;			
+				@media (min-width:500px) {
+					width:410px;
+				}
+				.fa {
+					font-size:100px;
+					float:left;
+					margin-left:30px;
+					margin-top:3px;
+					color:#666;
+					@media (max-width:500px) {
+						display: none
+					}
+				}
+			}
+			ul {
+				text-align: left;	
+				@media (min-width:500px) {
+						margin-left:120px;
+					}
+				li {
+					padding-left:20px;
+					span {
+						display: inline-block;
+						text-align: left;
+						vertical-align: middle;
+						b {
+							font-size: 20px;
+							color: #374045;
+							font-weight: bold;
+							margin-bottom: 5px;
+							display: block;
+						}
+					}
+					span.img-holder {
+						text-align: center;
+						padding: 0 12px;
+						img {
+							display: block;
+							
+						}
+					}
+				}
+			}
+		}
+		[class*='col-']:last-child {
+			border-left: 2px solid #F2F2F2;
+		}
+	}	
 }
 
-}
 
 // Sections
 
@@ -277,6 +356,7 @@ section[class$='-poly'] {
 section.intro {
 	background-color: $blue;
 	color: #fff;
+	padding-top:140px;
 	a {
       color: #fff;
     }
