--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,23 +12,23 @@
 		</div>
 		<div>
 			<div class="sponsor">
+				<p class="rank">Host Hotel</p>
+				<div class="sponsor-img">
+					<a href="http://www.sheratontoronto.com/" target="_blank"><img src="/static/images/sponsors/sheraton.jpg" class="img-responsive" alt="Sheraton Centre Hotel" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
 				<p class="rank">Official Canadian Airline</p>
 				<div class="sponsor-img">
 					<a href="http://www.aircanada.com/en/home.html" target="_blank"><img src="/static/images/sponsors/aircanada.svg" class="img-responsive" alt="Air Canada" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Host Hotel</p>
-				<div class="sponsor-img">
-					<a href="http://www.sheratontoronto.com/" target="_blank"><img src="/static/images/sponsors/sheraton.jpg" class="img-responsive" alt="Sheraton Centre Hotel" /></a>
-				</div>
-			</div>
-			<!-- <div class="sponsor">
 				<p class="rank">Travel Partner</p>
 				<div class="sponsor-img">
 					<a href="http://www.viarail.ca/en" target="_blank"><img src="/static/images/sponsors/viarail.svg" class="img-responsive" alt="ViaRail" /></a>
 				</div>
-			</div> -->
+			</div>
 			
 		</div>
 	</div>
