--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -11,26 +11,21 @@
 		<div id="information-bar">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-						<h4>This is what you'll get</h4>
-						<div>
-						<i class="fa fa-hand-peace-o"></i>
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 left">
+						<h4>What's Included</h4>
 						<ul>
+							<li>2 Days filled with networking and sessions</li>
+							<li>Mobile app for planning your schedule, and meeting attendees!</li>
+							<li>Video recordings of all sessions!</li>
 							<li>Passion Talks - by you!</li>
-							<li>Video recordings and keynotes</li>
-							<li>Scheduling mobile app</li>
-							<li>Lunch, snacks and refreshments</li>
-							<li>Swag, schwag and goodies!</li>
+							<li>Lunch, and lots of coffee!</li>
+							<li>Access to the Exhibit hall with lot's of swag!</li>
 						</ul>
-						</div>
 					</div>
-					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-						
-						<h4>Get your tickets here!!</h4>
-						<a class="btn btn-success btn-lg wow bounceIn"><i class="fa fa-ticket" style="visibility: visible; animation-name: bounceIn;"></i>
-							<span> Buy your tickets now!</span></a>
-						
-						<p class="templabelanyway->" style="color:#999" >Get yours ASAP for the early bird discounts!</p>
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right">
+						<a class="btn btn-success btn-lg wow bounceIn" href="https://fstoco16.eventbrite.ca" target="_blank"><i class="fa fa-ticket" style="visibility: visible; animation-name: bounceIn;"></i>
+							<span>Register Today!</span></a>
+						<p class="greytext small">Register today! Super Early Bird pricing is limited! <br />Cost: $400 (to Full Stack Toronto) + $15 EventBrite Fee + HST + Payment Proccessing Fee = $492.33</p>
 						
 					</div>
 				</div>	
