--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,13 +21,13 @@
                     <a href="/schedule">Schedule</a>
                 </li> 
                 <li>
-                    <a href="https://fstoco16.eventbrite.ca">Register</a>
+                    <a href="https://fstoco16.eventbrite.ca" target="_blank">Register</a>
                 </li> 
                 <li>
-                    <a href="http://eventmobi.com/fstoco2016">App</a>
+                    <a href="http://eventmobi.com/fstoco2016" target="_blank">App</a>
                 </li>   
                 <li>
-                    <a href="http://www.meetup.com/full-stack-to/">Meetups</a>
+                    <a href="http://www.meetup.com/full-stack-to/" target="_blank">Meetups</a>
                 </li>
             </ul>
         </div>
