--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -262,12 +262,16 @@ header.big {
 		color:#333;
 		text-shadow: none;
 		font-size:15px;
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
 		.container {
 			width:auto;
 			padding: 10px 15px;
 			background: #F6F9F9;
 			position: relative;
 			z-index: 999;
+      padding: 50px;
 			a {
 				line-height: 25px;
 				margin-bottom:30px;
@@ -277,7 +281,7 @@ header.big {
 				margin-right:5px;
 			}
 			h4 {
-				margin:30px 0;
+				margin:15px 0;
 				font-size:22px;
 				@media (min-width:500px) {
 					font-size:25px;
@@ -304,11 +308,9 @@ header.big {
 			}
 			ul {
 				text-align: left;	
-				@media (min-width:500px) {
-						margin-left:120px;
-					}
+				margin: 0;
+        padding: 0 0 0 20px;
 				li {
-					padding-left:20px;
 					span {
 						display: inline-block;
 						text-align: left;
@@ -335,9 +337,17 @@ header.big {
 		[class*='col-']:last-child {
 			border-left: 2px solid #F2F2F2;
 		}
+    .left {
+      text-align: left;
+    }
+    .right {
+      padding-top: 50px;
+    }
 	}	
 }
-
+.greytext {
+  color: #999;
+}
 
 // Sections
 
