--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -268,7 +268,7 @@ header.big {
 		.container {
 			width:auto;
 			padding: 10px 15px;
-			background: #F6F9F9;
+			background: #fff;
 			position: relative;
 			z-index: 999;
       padding: 50px;
