Remove line between columns in thinner screens
The line between the columns is unnecessary as they flow under.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -334,8 +334,10 @@ header.big {
 				}
 			}
 		}
-		[class*='col-']:last-child {
-			border-left: 2px solid #F2F2F2;
+		@media (min-width:992px) {
+			[class*='col-']:last-child {
+				border-left: 2px solid #F2F2F2;
+			}
 		}
     .left {
       text-align: left;
