speaking and info bar

--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -15,7 +15,7 @@
 						<h4>What's Included</h4>
 						<ul>
 							<li>2 Days filled with networking and sessions</li>
-							<li>Mobile app for planning your schedule, and meeting attendees!</li>
+							<li>Mobile app for planning your schedule, and meeting exhibitors, sponsors, and attendees!</li>
 							<li>Video recordings of all sessions!</li>
 							<li>Passion Talks - by you!</li>
 							<li>Lunch, and lots of coffee!</li>
@@ -25,7 +25,7 @@
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right">
 						<a class="btn btn-success btn-lg wow bounceIn" href="https://fstoco16.eventbrite.ca" target="_blank"><i class="fa fa-ticket" style="visibility: visible; animation-name: bounceIn;"></i>
 							<span>Register Today!</span></a>
-						<p class="greytext small">Register today! Super Early Bird pricing is limited! <br />Cost: $400 (to Full Stack Toronto) + EventBrite Fee + HST + Payment Proccessing Fee = $474.60</p>
+						<p class="greytext small">Register today! Super Early Bird pricing is limited! <br />Super Early Bird Cost: $400 (to Full Stack Toronto) + EventBrite Fee + HST + Payment Proccessing Fee = $474.60</p>
 					</div>
 				</div>	
 			</div>
