--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,9 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<h1>{{ page.title }}</h1>
-					<h2>#fstoco 2016 Oct. 17-18th 2016</h2>
-					<h4>Tickets on sale Jan. 1st!</h4>
+					<h3>#fstoco 2016 Oct. 17-18th 2016</h3>
+					<h4><a class="btn btn-success btn-lg wow bounceIn" href="https://fstoco16.eventbrite.ca" target="_blank"><i class="fa fa-ticket" style="visibility: visible; animation-name: bounceIn;"></i>
+							<span>Register Today!</span></a></h4>
 				</div>
 			</div>
 		</div>
