--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,5 +45,5 @@
     <meta property="og:image" content="https://fsto.co/static/images/card.jpg" />
     <meta property="og:description" content="Full Stack Toronto is a non-profit that hosts monthly seminars and an annual conference that covers all the layers of the web and the people who weave it! #fstoco is coming up Oct. 17-18th, 2016 in Toronto, Canada" />
     <meta property="og:site_name" content="Full Stack Toronto" />
-
+    <script src="https://js.tito.io/v1" async></script>
 </head>
