--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -25,7 +25,7 @@
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right">
 						<a class="btn btn-success btn-lg wow bounceIn" href="https://ti.to/fullstackto/2016" target="_blank"><i class="fa fa-ticket" style="visibility: visible; animation-name: bounceIn;"></i>
 							<span>Register Today!</span></a>
-						<p class="greytext small">Register today! Super Early Bird pricing is limited! <br />Super Early Bird Cost: $400 (to Full Stack Toronto) + EventBrite Fee + HST + Payment Proccessing Fee = $474.60</p>
+						<p class="greytext small">Register today! Super Early Bird pricing is limited! <br />Super Early Bird Cost: $400 (to Full Stack Toronto) + HST + Payment Proccessing Fee = $471.06</p>
 					</div>
 				</div>	
 			</div>
