--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,18 @@
 					<a href="http://www.viarail.ca/en" target="_blank"><img src="/static/images/sponsors/viarail.svg" class="img-responsive" alt="ViaRail" /></a>
 				</div>
 			</div>
-			
+			<div class="sponsor">
+				<p class="rank">Registration Partner</p>
+				<div class="sponsor-img">
+					<a href="https://ti.to" target="_blank"><img src="https://ti.to/jscss/tito-machine.svg" class="img-responsive"alt="Tito"></a>
+				</div>
+			</div>
+			<div class="sponsor">
+				<p class="rank">Mobile App Partner</p>
+				<div class="sponsor-img">
+					<a href="https://eventmobi.com" target="_blank"><img src="/static/images/sponsors/eventmobit.png" class="img-responsive"alt="Tito"></a>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
