--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
 			<div class="sponsor">
 				<p class="rank">Mobile App Partner</p>
 				<div class="sponsor-img">
-					<a href="https://eventmobi.com" target="_blank"><img src="/static/images/sponsors/eventmobit.png" class="img-responsive"alt="Tito"></a>
+					<a href="https://eventmobi.com" target="_blank"><img src="/static/images/sponsors/eventmobi.png" class="img-responsive" alt="EventMobi"></a>
 				</div>
 			</div>
 		</div>
