--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                     <a href="/schedule">Schedule</a>
                 </li> 
                 <li>
-                    <a href="https://fstoco16.eventbrite.ca" target="_blank">Register</a>
+                    <a href="https://ti.to/fullstackto/2016" target="_blank">Register</a>
                 </li> 
                 <li>
                     <a href="http://eventmobi.com/fstoco2016" target="_blank">App</a>
