--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -15,17 +15,18 @@
 						<h4>What's Included</h4>
 						<ul>
 							<li>Two days filled with networking and sessions</li>
-							<li>Mobile app for planning your schedule, and meeting exhibitors, sponsors, and attendees!</li>
+							<li>Mobile app for planning your schedule, meeting exhibitors, sponsors, and attendees!</li>
 							<li>Video recordings of all sessions!</li>
 							<li>Passion Talks - by you!</li>
 							<li>Lunch and lots of coffee!</li>
+							<li>Free WiFi!</li>
 							<li>Access to the Exhibit hall with lots of swag!</li>
 						</ul>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right">
 						<a class="btn btn-success btn-lg wow bounceIn" href="https://ti.to/fullstackto/2016" target="_blank"><i class="fa fa-ticket" style="visibility: visible; animation-name: bounceIn;"></i>
 							<span>Register Today!</span></a>
-						<p class="greytext small">Register today! Super Early Bird pricing is limited! <br />Super Early Bird Cost: $400 (to Full Stack Toronto) + HST + Payment Proccessing Fee = $471.06</p>
+						<p class="greytext small">Pricing includes all taxes and services fees. Tickets do not need to be assigned to an attendee right away. You may assign your tickets to your company name to create a flex pass.</p>
 					</div>
 				</div>	
 			</div>
