--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -162,8 +162,8 @@ aside {
       .navbar-collapse.in, .navbar-collapse.collapsing {
 	    background:#fff;
 	    padding-bottom:10px;
-	    position: absolute;
 	    width:100%;
+	    position: relative;
       }   
     }
     .nav {
