--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -17,9 +17,8 @@
 							<li>Two days filled with networking and sessions</li>
 							<li>Mobile app for planning your schedule, meeting exhibitors, sponsors, and attendees!</li>
 							<li>Video recordings of all sessions!</li>
-							<li>Passion Talks - by you!</li>
-							<li>Lunch and lots of coffee!</li>
-							<li>Free WiFi!</li>
+							<li>Cocktail Reception</li>
+							<li>Snacks and lots of coffee!</li>
 							<li>Access to the Exhibit hall with lots of swag!</li>
 						</ul>
 					</div>
