--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,19 @@
 		</div>
 		<div>
 			<div class="sponsor">
+				<p class="rank">Gold Sponsor</p>
+				<div class="sponsor-img">
+					<a href="
+https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=fullstackto2016" target="_blank"><img src="/static/images/sponsors/bugsnag.png" class="img-responsive" alt="BugSnag" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
+				<p class="rank">Silver Sponsor</p>
+				<div class="sponsor-img">
+					<a href="https://www.twilio.com/" target="_blank"><img src="/static/images/sponsors/twilio.png" class="img-responsive" alt="Twilio" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
 				<p class="rank">Host Hotel</p>
 				<div class="sponsor-img">
 					<a href="http://www.sheratontoronto.com/" target="_blank"><img src="/static/images/sponsors/sheraton.jpg" class="img-responsive" alt="Sheraton Centre Hotel" /></a>
