--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,14 +12,14 @@
 		</div>
 		<div>
 			<div class="sponsor">
-				<p class="rank">Gold Sponsor</p>
+				<p class="rank">Gold Sponsor - Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="
 https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=fullstackto2016" target="_blank"><img src="/static/images/sponsors/bugsnag.png" class="img-responsive" alt="BugSnag" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Silver Sponsor</p>
+				<p class="rank">Silver Sponsor- Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="https://www.twilio.com/" target="_blank"><img src="/static/images/sponsors/twilio.png" class="img-responsive" alt="Twilio" /></a>
 				</div>
@@ -34,6 +34,12 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				<p class="rank">Official Canadian Airline</p>
 				<div class="sponsor-img">
 					<a href="http://www.aircanada.com/en/home.html" target="_blank"><img src="/static/images/sponsors/aircanada.svg" class="img-responsive" alt="Air Canada" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
+				<p class="rank">Travel Partner</p>
+				<div class="sponsor-img">
+					<a href="https://www.united.com/" target="_blank"><img src="/static/images/sponsors/united.png" class="img-responsive" alt="United Airlines" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
