--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,12 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				</div>
 			</div>
 			<div class="sponsor">
+				<p class="rank">Silver Sponsor- Exhibitor</p>
+				<div class="sponsor-img">
+					<a href="https://pusher.com/" target="_blank"><img src="/static/images/sponsors/psuher.png" class="img-responsive" alt="Pusher" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
 				<p class="rank">Host Hotel</p>
 				<div class="sponsor-img">
 					<a href="http://www.sheratontoronto.com/" target="_blank"><img src="/static/images/sponsors/sheraton.jpg" class="img-responsive" alt="Sheraton Centre Hotel" /></a>
