--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,6 +67,35 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				</div>
 			</div>
 		</div>
+		<div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<p>&nbsp;</p>
+				<p>We would like to thank the following companies for paying the way for their employees to come speak at our events</p>
+			</div>
+			<div>
+				<div class="sponsor">
+					<p class="rank">Speaker Sponsor</p>
+					<div class="sponsor-img">
+						<a href="#"><img src="/static/images/sponsors/twitter.png" class="img-responsive" alt="Twitter"></a>
+					</div>
+				</div>
+				<div class="sponsor">
+					<p class="rank">Speaker Sponsor</p>
+					<div class="sponsor-img">
+						<a href="#"><img src="/static/images/sponsors/thoughtbot.png" class="img-responsive" alt="Thought Bot"></a>
+					</div>
+				</div>
+				<div class="sponsor">
+					<p class="rank">Speaker Sponsor</p>
+					<div class="sponsor-img">
+						<a href="#"><img src="/static/images/sponsors/cedexis.png" class="img-responsive" alt="Cedexis"></a>
+					</div>
+				</div>
+			<div> 
+		</div>
 	</div>
 </section>
 <footer>
