--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -23,7 +23,7 @@
 						</ul>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right">
-						<a class="btn btn-success btn-lg wow bounceIn" href="https://ti.to/fullstackto/2016" target="_blank"><i class="fa fa-ticket" style="visibility: visible; animation-name: bounceIn;"></i>
+						<a class="btn btn-success btn-lg" href="https://ti.to/fullstackto/2016" target="_blank"><i class="fa fa-ticket"></i>
 							<span>Register Today!</span></a>
 						<p class="greytext small">Pricing includes all taxes and services fees. Tickets do not need to be assigned to an attendee right away. You may assign your tickets to your company name to create a flex pass.</p>
 					</div>
