--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 				<div class="col-sm-12">
 					<h1>{{ page.title }}</h1>
 					<h3>#fstoco 2016 Oct. 17-18th 2016</h3>
-					<h4><a class="btn btn-success btn-lg wow bounceIn" href="https://ti.to/fullstackto/2016" target="_blank"><i class="fa fa-ticket" style="visibility: visible; animation-name: bounceIn;"></i>
+					<h4><a class="btn btn-success btn-lg" href="https://ti.to/fullstackto/2016" target="_blank"><i class="fa fa-ticket"></i>
 							<span>Register Today!</span></a></h4>
 				</div>
 			</div>
