--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,10 @@
                 </li>
                 <li>
                     <a href="/schedule">Schedule</a>
-                </li> 
+                </li>
+                <li>
+                    <a href="/speakers">Speakers</a>
+                </li>
                 <li>
                     <a href="https://ti.to/fullstackto/2016" target="_blank">Register</a>
                 </li> 
