--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,6 +18,9 @@
                     <a href="/speak">Speak</a>
                 </li>
                 <li>
+                    <a href="/speakers">Speakers</a>
+                </li>
+                <li>
                     <a href="/schedule">Schedule</a>
                 </li> 
                 <li>
