--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -507,6 +507,23 @@ section iframe {
   }
 }
 
+//Speakers
+.speakerBundle {
+  clear:both;
+  display:flex;
+  flex-wrap: wrap;
+  .speaker {
+    margin:30px 0;
+    padding:0 30px;
+    img {
+      margin-bottom:30px;
+    }  
+    h4, h3 {
+      margin:0;
+      margin-bottom:15px;
+    }
+  }
+}  
 
 //Sponsors
 .sponsor {
