--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -5,6 +5,7 @@
 				<h1>#fstoco 2016</h1>
 				<h2>The conference that covers all the layers of the Web and the people who weave it!</h2>
 				<h3>Oct 17-18th, 2016</h3>
+				<h3>Sheraton Centre</h3>
 				<h3>Toronto, Canada</h3>
 			</div>	
 		</div>
