--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,7 +57,7 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 			<div class="sponsor">
 				<p class="rank">Registration Partner</p>
 				<div class="sponsor-img">
-					<a href="https://ti.to" target="_blank"><img src="https://ti.to/jscss/tito-machine.svg" class="img-responsive"alt="Tito"></a>
+					<a href="https://ti.to" target="_blank"><img src="/static/images/sponsors/tito-machine.png" class="img-responsive"alt="Tito"></a>
 				</div>
 			</div>
 			<div class="sponsor">
