--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,14 +4,7 @@
 <!-- Bootstrap Core JavaScript -->
 <script src="/js/bootstrap.min.js"></script>
 
-<!-- Plugin JavaScript -->
-<script src="/js/jquery.easing.min.js"></script>
-<script src="/js/jquery.fittext.js"></script>
-
-<!-- Custom Theme JavaScript -->
-<script src="/js/classie.js"></script>
-<script src="/js/cbpAnimatedHeader.js"></script>
-<script src="/js/creative.js"></script>
+<!-- Google Analytics -->
 <script async>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
