--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,10 +69,11 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 		</div>
 		<div>
 	</div>
+	<div class="clearfix"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<p>&nbsp;</p>
+				<h4>Speaker Sponsors</h4>
 				<p>We would like to thank the following companies for paying the way for their employees to come speak at our events</p>
 			</div>
 			<div>
@@ -92,6 +93,35 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 					<p class="rank">Speaker Sponsor</p>
 					<div class="sponsor-img">
 						<a href="#"><img src="/static/images/sponsors/cedexis.png" class="img-responsive" alt="Cedexis"></a>
+					</div>
+				</div>
+			<div> 
+		</div>
+	</div>
+	<div class="clearfix"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<h4>Community Partners</h4>
+				<p>We would like to thank the following comunity groups and companies for helping spread the word about our events</p>
+			</div>
+			<div>
+				<div class="sponsor">
+					<p class="rank">Community Partner</p>
+					<div class="sponsor-img">
+						<a href="http://www.meetup.com/DevTOEvents/" target="_Blank"><img src="/static/images/sponsors/devto.png" class="img-responsive" alt="DevTo"></a>
+					</div>
+				</div>
+				<div class="sponsor">
+					<p class="rank">Community Partner</p>
+					<div class="sponsor-img">
+						<a href="http://www.meetup.com/ruby-lightning-to/" target="_Blank"><img src="/static/images/sponsors/rubylightning.png" class="img-responsive" alt="Ruby Lightning Talks"></a>
+					</div>
+				</div>
+				<div class="sponsor">
+					<p class="rank">Community Partner</p>
+					<div class="sponsor-img">
+						<a href="http://www.meetup.com/Women-Who-Code-Toronto/" target="_Blank" ><img src="/static/images/sponsors/wwc.png" class="img-responsive" alt="Women Who Code"></a>
 					</div>
 				</div>
 			<div> 
