--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -124,6 +124,12 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 						<a href="http://www.meetup.com/Women-Who-Code-Toronto/" target="_Blank" ><img src="/static/images/sponsors/wwc.png" class="img-responsive" alt="Women Who Code"></a>
 					</div>
 				</div>
+				<div class="sponsor">
+					<p class="rank">Meetup Partner</p>
+					<div class="sponsor-img">
+						<a href="http://www.pridetoronto.com/" target="_Blank" ><img src="/static/images/sponsors/pride-toronto.png" class="img-responsive" alt="Pride Toronto"></a>
+					</div>
+				</div>
 			<div> 
 		</div>
 	</div>
