--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,8 @@
     <![endif]-->
 
     <meta name="description" content="Full Stack Toronto is a non-profit that hosts monthly seminars and an annual conference that covers all the layers of the web and the people who weave it! #fstoco is coming up Oct. 17-18th, 2016 in Toronto, Canada" />
+    <meta name="keywords" content="Front-End Design Conference, Full STack, Full Stack Toronto, FSTO, Web Conference, Design, Development, Business, Marketing, Toronto, Ontario, Canada, Front-End, Front End, Back-end, back end, devops, dev ops, product development, project management, web development conference, web design conference, ux conference, devops conference, product conference, exhibit hall">
+    <meta name="Category" content="Conferences" />
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Full Stack Toronto">
