--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -95,6 +95,12 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 						<a href="#"><img src="/static/images/sponsors/cedexis.png" class="img-responsive" alt="Cedexis"></a>
 					</div>
 				</div>
+				<div class="sponsor">
+					<p class="rank">Speaker Sponsor</p>
+					<div class="sponsor-img">
+						<a href="#"><img src="/static/images/sponsors/paciello.png" class="img-responsive" alt="Paciello"></a>
+					</div>
+				</div>
 			<div> 
 		</div>
 	</div>
