--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -14,3 +14,4 @@
     ga('create', 'UA-48190009-2', 'auto');
     ga('send', 'pageview');
 </script>
+<!--Start of Sponseasy sponsorship proposal widget--><script type="text/javascript">(function(){var ss=document.createElement('script'); ss.type='text/javascript';ss.async=true;ss.src='https://www.sponseasy.com/api/plugins/full-stack-toronto-conference.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ss,s);})()</script><!--End of Sponseasy sponsorship proposal widget-->
