--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="/speak">Speak</a>
+                     <a href="https://ti.to/fullstackto/2016" target="_blank">Register</a>
                 </li>
                 <li>
                     <a href="/schedule">Schedule</a>
@@ -24,7 +24,7 @@
                     <a href="/speakers">Speakers</a>
                 </li>
                 <li>
-                    <a href="https://ti.to/fullstackto/2016" target="_blank">Register</a>
+                   <a href="https://www.sponseasy.com/p/full-stack-toronto-conference" target="_blank">Sponsor</a>
                 </li> 
                 <li>
                     <a href="http://eventmobi.com/fstoco2016" target="_blank">App</a>
