Speaker on schedule

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -459,7 +459,7 @@ section iframe {
   cursor: pointer;
   width: 99%;
   $borderleft: 3px solid;
-  span {
+  div {
     display: block;
     font-size: 12px;
     &.title {
